bk_ida/gccida/g1/resolve_operand_name_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/resolve_operand_name_1/src/stmt.c:2616:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)chain->int_cst.rtl[1].fld[0]; 
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/resolve_operand_name_1/src/stmt.c:2637:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)inputs->int_cst.rtl[1].fld[0]; 
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/resolve_operand_name_1/src/stmt.c:2658:14: error: use of undeclared identifier 'off_6376D2'
sprintf( p, &off_6376D2[1], v6); 
             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/resolve_operand_name_1/src/obj/stmt.o] Error 1
